--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -3,42 +3,140 @@
 
 
 
-
-
 {% block content %}
 
+    <ol class="breadcrumb">
+        <li><a href="#">資產管理</a></li>
 
-    <h2 class="sub-header">資產管理</h2>
-    <div class="table-responsive">
-        <table class="table">
-            <thead>
+    </ol>
+
+
+
+
+    <div class="row">
+
+
+        <div class="col-md-6 col-md-push-8 col-sm-6 col-md-push-8">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label for="inputPassword" class="col-form-label">搜尋</label>
+                    <input type="password" class="" id="inputPassword" placeholder="">
+                </div>
+
+                <div class="form-group">
+                    <label>類型</label>
+                </div>
+                <div class="form-group">
+
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="true">
+                            -----
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">電腦(PC)</a></li>
+                            <li><a href="#">滑鼠(M)</a></li>
+                            <li><a href="#">變壓器(P)</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label>部門</label>
+                </div>
+                <div class="form-group">
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
+                                data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="true">
+                            -----
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">資訊部(IT)</a></li>
+                            <li><a href="#">人資部(HR)</a></li>
+                            <li><a href="#">客服部(CS)</a></li>
+                            <li><a href="#">公關部(PR)</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <button type="button" class="btn btn-success" style="margin-left: 20px">Submit</button>
+                </div>
+
+            </form>
+        </div>
+
+        <div class="col-md-1 col-md-pull-6 col-sm-1 col-sm-pull-6">
+
+            <button type="button" class="btn btn-primary">新增資產</button>
+
+
+        </div>
+
+
+    </div>
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th>資產編號</th>
+
+            <th>類型</th>
+            <th>部門</th>
+            <th>負責人</th>
+            <th>購買日期</th>
+            <th>價格</th>
+            <th>操作</th>
+
+
+        </tr>
+        </thead>
+        <tbody>
+        {% for asset in asset_obj %}
+
             <tr>
-                <th>資產編號</th>
-                <th>價格</th>
-                <th>類型</th>
-                <th>部門</th>
-                <th>負責人</th>
+                <td>{{ asset.category.code }}-{{ asset.sn }}</td>
 
+                <td>{{ asset.category }}</td>
+                <td>{{ asset.department }}</td>
+                <td>{{ asset.manager }}</td>
+                <td>{{ asset.create_date|date:"Y-m-d" }}</td>
+
+                <td>{{ asset.price }}</td>
+                <td>
+                    <i class="fas fa-pen"></i>
+
+                    <i class="fas fa-trash-alt"></i>
+                </td>
 
             </tr>
-            </thead>
-            <tbody>
-            {% for asset in asset_obj %}
-
-                <tr>
-                    <td>{{ asset.category.code }}-{{ asset.sn }}</td>
-                    <td>{{ asset.price }}</td>
-                    <td>{{ asset.category }}</td>
-                    <td>{{ asset.department }}</td>
-                    <td>{{ asset.manager }}</td>
-
-                </tr>
-            {% endfor %}
+        {% endfor %}
 
 
-            </tbody>
-        </table>
-    </div>
+        </tbody>
+    </table>
+
+
+    {#    </div>#}
 
 
 {% endblock %}
+
+
+{% block extra-js %}
+
+    <script>
+
+        $(document).ready(function () {
+            $('.dropdown-toggle').dropdown()
+        })
+    </script>
+
+{% endblock %}
+
+
