--- a/AutoCmdb/templates/asset/index.html
+++ b/AutoCmdb/templates/asset/index.html
@@ -17,58 +17,41 @@
 
             <div class="col-md-4">
 
-                <button type="button" class="btn btn-primary">新增資產</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#assetform_add_Modal">
+                    新增資產
+                </button>
 
 
             </div>
 
 
             <div class="col-md-8" style="text-align: right">
-                <form class="form-inline">
+                <form class="form-inline" method="get">
+
                     <div class="form-group">
-                        <label for="inputPassword" class="col-form-label">搜尋</label>
-                        <input type="password" class="" id="inputPassword" placeholder="">
+                        <label for="inputsearch" class="col-form-label">搜尋</label>
+                        <input type="" class="" id="search" placeholder="">
                     </div>
 
                     <div class="form-group">
-                        <label>類型</label>
-                    </div>
-                    <div class="form-group">
-
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                    data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="true">
-                                -----
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">電腦(PC)</a></li>
-                                <li><a href="#">滑鼠(M)</a></li>
-                                <li><a href="#">變壓器(P)</a></li>
-                            </ul>
-                        </div>
+                        <label class="col-form-label">類型</label>
+                        <select class="form-control">
+                            <option>-------</option>
+                            {% for category in category_obj %}
+                                <option value="{{ category.id }}">{{ category.name }}({{ category.code }})</option>
+                            {% endfor %}
+                        </select>
                     </div>
 
 
                     <div class="form-group">
-                        <label>部門</label>
-                    </div>
-                    <div class="form-group">
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                    data-toggle="dropdown"
-                                    aria-haspopup="true" aria-expanded="true">
-                                -----
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li><a href="#">資訊部(IT)</a></li>
-                                <li><a href="#">人資部(HR)</a></li>
-                                <li><a href="#">客服部(CS)</a></li>
-                                <li><a href="#">公關部(PR)</a></li>
-                            </ul>
-                        </div>
+                        <label class="col-form-label">部門</label>
+                        <select class="form-control">
+                            <option>-------</option>
+                            {% for department in department_obj %}
+                                <option value="{{ department.id }}">{{ department.name }}部({{ department.code }})</option>
+                            {% endfor %}
+                        </select>
                     </div>
 
                     <div class="form-group">
@@ -77,9 +60,8 @@
 
                 </form>
             </div>
-
-
         </div>
+
 
         <table class="table">
             <thead>
@@ -105,7 +87,7 @@
                     <td>{{ asset.category }}</td>
                     <td>{{ asset.department }}</td>
                     <td>{{ asset.manager }}</td>
-                    <td>{{ asset.create_date|date:"Y-m-d" }}</td>
+                    <td>{{ asset.create_date|date:"Y-m-d"}}</td>
 
                     <td>{{ asset.price }}</td>
                     <td>
@@ -123,7 +105,74 @@
 
     </div>
 
-    {#    </div>#}
+    <div class="modal fade" id="assetform_add_Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+
+                    <h4 class="modal-title" id="myModalLabel">新增資產</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="post" id="assetform_add">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="">類型</label>
+                            <select name="category" onchange="foo(this)" class="form-control">
+                                <option value="">-------</option>
+                                {% for category in category_obj %}
+                                    <option
+                                            value="{{ category.id }}">{{ category.name }}({{ category.code }})
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="">資產編號</label>
+                            <input type="text" name="sn" class="form-control" placeholder="">
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-form-label">部門</label>
+                            <select class="form-control">
+                                <option>-------</option>
+                                {% for department in department_obj %}
+                                    <option name="department"
+                                            value="{{ department.id }}">{{ department.name }}部({{ department.code }})
+                                    </option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-form-label">資產負責人</label>
+                            <select name="user" class="form-control">
+                                <option value="">-------</option>
+                                {% for user in user_obj %}
+                                    <option value="{{ user.id }}">{{ user.name }}({{ user.code }})</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-form-label">價格</label>
+                            <input name="price" type="number" class="form-control">
+                        </div>
+
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button id="assetform_submit" type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 {% endblock %}
@@ -133,9 +182,73 @@
 
     <script>
 
+
         $(document).ready(function () {
             $('.dropdown-toggle').dropdown()
-        })
+        });
+
+        $('#myModal').on('hidden.bs.modal', function (e) {
+            // do something...
+        });
+
+
+
+        $('#assetform_add_Modal').on('show.bs.modal', function (e) {
+            $("#assetform_add").trigger('reset');
+        });
+
+
+        // 選擇類型後請求該分類數量
+        function foo(e) {
+            //console.log(e);
+            //console.log($(this));
+            //console.log(e.value);
+
+            $.ajax({
+                url: "/api/category",
+                type: "GET",
+                data: {'cate': e.value},
+
+                success: function (callback) {
+                    //console.log(callback);
+                    $('#assetform_add_Modal').find("[name='sn']").val(callback.number)
+                },
+                error: function () {
+
+                }
+            });
+        };
+
+
+        // 提交 新增資產表單
+        $("#assetform_add").on("submit", function (e) {
+            //console.log(e);
+            //console.log($(this));
+            var postData = $(this).serializeArray();
+            console.log(postData);
+
+            $.ajax({
+                url: "",
+                type: "POST",
+                data: postData,
+                success: function (callback) {
+                    console.log(callback);
+
+                    $('#assetform_add_Modal').modal('hide')
+                },
+                error: function () {
+
+                }
+            });
+            e.preventDefault();
+        });
+
+        $("#assetform_submit").on('click', function () {
+
+            $("#assetform_add").submit();
+        });
+
+
     </script>
 
 {% endblock %}
