--- a/AutoCmdb/templates/asset/base.html
+++ b/AutoCmdb/templates/asset/base.html
@@ -18,6 +18,7 @@
 
     <ul class="nav nav-sidebar">
         <li><a href="/host/index">運維管理</a></li>
+        <li><a href="/asset/user">用戶管理</a></li>
     </ul>
 
 
