--- a/AutoCmdb/templates/user/index.html
+++ b/AutoCmdb/templates/user/index.html
@@ -1,9 +1,8 @@
-{% extends 'asset/base.html' %}
+{% extends 'user/base.html' %}
 
 
 
 {% block content %}
-
 
     <h2 class="sub-header">用戶管理</h2>
 
@@ -12,9 +11,10 @@
             <thead>
             <tr>
                 <th>名稱</th>
+                <th>英文名</th>
+                <th>性別</th>
                 <th>編號</th>
                 <th>部門</th>
-
             </tr>
             </thead>
             <tbody>
@@ -22,12 +22,13 @@
 
                 <tr>
                     <td>{{ user.name }}</td>
-                    <td>{{ user.code }}</td>
+                    <td>{{ user.user.username }}</td>
+                    <td>{{ user.get_sex_display }}</td>
+                    <td>{{ user.dent.block_number }}{{ user.code }}</td>
                     <td>{{ user.dent }}</td>
-
                 </tr>
-            {% endfor %}
 
+            {% endfor %}
 
             </tbody>
         </table>
