--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -12,6 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-datepicker.css" rel="stylesheet">
+
     <link href="/static/css/dashboard.css" rel="stylesheet">
     <link href="/static/css/all.css" rel="stylesheet">
 
@@ -20,6 +22,7 @@
 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-3.3.1.js"></script>
+    <script src="/static/js/bootstrap-datepicker.js"></script>
     <script src="/static/js/bootstrap.js"></script>
     <script src="/static/js/all.js"></script>
 
